[gd_scene load_steps=5 format=3 uid="uid://sqqiy62qf6np"]

[ext_resource type="Script" uid="uid://cg0pigwrqqh4d" path="res://scripts/main_scene.gd" id="1_7ykc4"]
[ext_resource type="PackedScene" uid="uid://dehkeao1vbiy0" path="res://scenes/gamemodes/mode_attendance.tscn" id="2_pu3yx"]
[ext_resource type="PackedScene" uid="uid://d4fehmyo6hugb" path="res://scenes/gamemodes/mode_preparation.tscn" id="3_gubc5"]
[ext_resource type="PackedScene" uid="uid://ch10a2d2ac4y4" path="res://scenes/gamemodes/mode_end_of_day.tscn" id="4_pu3yx"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_7ykc4")

[node name="Mode_Attendance" parent="." instance=ExtResource("2_pu3yx")]

[node name="Mode_Preparation" parent="." instance=ExtResource("3_gubc5")]

[node name="Mode_EndOfDay" parent="." instance=ExtResource("4_pu3yx")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ClockLabel" type="Label" parent="HUD"]
offset_left = 16.0
offset_top = 8.0
offset_right = 57.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "08:00"

[node name="MoneyLabel" type="Label" parent="HUD"]
offset_left = 568.0
offset_top = 8.0
offset_right = 624.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "R$: 100"

[node name="DayLabel" type="Label" parent="HUD"]
offset_left = 304.0
offset_top = 8.0
offset_right = 344.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "Dia 1"
